Test of -kanji-internal=(sjis|euc) with upTeX
These format-build settings make it effectively pTeX. Thanks to
Hironori Kitagawa for the information.

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -109,6 +109,11 @@
 %     \sys_if_engine_uptex:,
 %     \sys_if_engine_xetex:
 %   }
+%   Set up the engine tests on the basis exactly one test should be true.
+%   Mainly a case of looking for the appropriate marker primitive. For
+%   \upTeX{}, there is a complexity in that setting |-kanji-internal=sjis|
+%   or |-kanji-internal=euc| effective makes it more like \pTeX{}. In those
+%   cases we therefore report \pTeX{} rather than \upTeX{}.
 %    \begin{macrocode}
 \clist_map_inline:nn { lua , pdf , p , up , xe }
   {
@@ -133,7 +138,11 @@
   }
 \cs_if_exist:NT \ptex_kanjiskip:D
   {
-    \cs_if_exist:NTF \uptex_disablecjktoken:D
+    \bool_if:nTF
+      {
+        \cs_if_exist_p:N \uptex_disablecjktoken:D &&
+        \int_compare_p:nNn { \ptex_jis:D "2121 } = { "3000 }
+      }
       {
         \cs_gset_eq:NN \sys_if_engine_uptex:T  \use:n
         \cs_gset_eq:NN \sys_if_engine_uptex:F  \use_none:n
