--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1191,11 +1191,12 @@
       }
   }
 \cs_generate_variant:Nn \int_const:Nn { c }
-\if_int_compare:w 0
+\if_int_odd:w 0
   \cs_if_exist:NT \luatex_luatexversion:D  { 1 }
-  \cs_if_exist:NT \uptex_disablecjktoken:D { 1 }
+  \cs_if_exist:NT \uptex_disablecjktoken:D
+    { \if_int_compare:w \ptex_jis:D "2121 = "3000 ~ 1 \fi: }
   \cs_if_exist:NT \xetex_XeTeXversion:D    { 1 }
-  > \c_zero
+  ~
     \cs_if_exist:NTF \uptex_disablecjktoken:D
       { \cs_new_eq:NN \@@_constdef:Nw \uptex_kchardef:D }
       { \cs_new_eq:NN \@@_constdef:Nw \tex_chardef:D }
