--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -322,7 +322,7 @@
     \bool_if:nTF
       {
         \sys_if_engine_luatex_p: ||
-        \sys_if_engine_xetex_p
+        \sys_if_engine_xetex_p:
       }
       { "10FFFF }
       { "FF }
@@ -1049,7 +1049,7 @@
 \bool_if:nTF
   {
     \sys_if_engine_luatex_p: ||
-    \sys_if_engine_xetex_p
+    \sys_if_engine_xetex_p:
   }
   {
     \cs_new:Npn \@@_filter_bytes:n #1
@@ -1082,7 +1082,7 @@
 \bool_if:nTF
   {
     \sys_if_engine_luatex_p: ||
-    \sys_if_engine_xetex_p
+    \sys_if_engine_xetex_p:
   }
   {
     \cs_new_protected_nopar:Npn \@@_convert_unescape_:
@@ -1135,7 +1135,7 @@
   \bool_if:nTF
     {
       \sys_if_engine_luatex_p: ||
-      \sys_if_engine_xetex_p
+      \sys_if_engine_xetex_p:
     }
 %    \end{macrocode}
 % \begin{macro}[aux]{\@@_encode_native_loop:w}
@@ -1450,7 +1450,7 @@
 \bool_if:nT
   {
     \sys_if_engine_luatex_p: ||
-    \sys_if_engine_xetex_p
+    \sys_if_engine_xetex_p:
   }
   {
     \__msg_kernel_new:nnnn { str } { non-byte }
