Move space from start of line
Thanks to Bruno for reminding me about this!

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1195,8 +1195,7 @@
   \cs_if_exist:NT \luatex_luatexversion:D  { 1 }
   \cs_if_exist:NT \uptex_disablecjktoken:D
     { \if_int_compare:w \ptex_jis:D "2121 = "3000 ~ 1 \fi: }
-  \cs_if_exist:NT \xetex_XeTeXversion:D    { 1 }
-  ~
+  \cs_if_exist:NT \xetex_XeTeXversion:D    { 1 } ~
     \cs_if_exist:NTF \uptex_disablecjktoken:D
       { \cs_new_eq:NN \@@_constdef:Nw \uptex_kchardef:D }
       { \cs_new_eq:NN \@@_constdef:Nw \tex_chardef:D }
