Intergrate l3str into the kernel
This commit adds all of the 'experimental' part of l3str to expl3.
The primary driver here is str variables, but it seemed best to
take everything.

There are a few adjustments to other places to accommodate this.
Most notably, this now means loading l3str alone gives an error,
but only a couple of packages outside of the repo do this. Also
notice loss of some (old) deprecated functions: as these are in
l3experimental, no notice is needed.

Further adjustment is likely needed yet. In particular, I will
probably split up the l3str part inside l3experimental since it
no longer creates a file "l3str.sty"!

--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -355,7 +355,7 @@
     \use:nf { #2 #1 }
       {
         \prg_replicate:nn
-          { \int_max:nn { #3 - \__str_count_unsafe:n { #2 #1 } } { 0 } }
+          { \int_max:nn { #3 - \__str_count:n { #2 #1 } } { 0 } }
           {#4}
       }
   }
@@ -374,7 +374,7 @@
 \cs_new:cpn { @@_align_>:nnnN } #1#2#3#4
   {
     \prg_replicate:nn
-      { \int_max:nn { #3 - \__str_count_unsafe:n { #2 #1 } } { 0 } }
+      { \int_max:nn { #3 - \__str_count:n { #2 #1 } } { 0 } }
       {#4}
     #2 #1
   }
@@ -399,7 +399,7 @@
         \prg_replicate:nn
           {
             \int_max:nn \c_zero
-              { #3 - \__str_count_unsafe:n { #2 #1 } - \c_one }
+              { #3 - \__str_count:n { #2 #1 } - \c_one }
             / \c_two
           }
           {#4}
@@ -409,7 +409,7 @@
         \prg_replicate:nn
           {
             \int_max:nn \c_zero
-              { #3 - \__str_count_unsafe:n { #2 #1 } }
+              { #3 - \__str_count:n { #2 #1 } }
             / \c_two
           }
           {#4}
@@ -433,7 +433,7 @@
     \use:nf {#2}
       {
         \prg_replicate:nn
-          { \int_max:nn { #3 - \__str_count_unsafe:n { #2 #1 } } { 0 } }
+          { \int_max:nn { #3 - \__str_count:n { #2 #1 } } { 0 } }
           {#4}
       }
     #1
@@ -472,9 +472,9 @@
 %   a trailing \cs{s__stop} for later retrieval.  Then check that there
 %   was no \meta{sign}.  The width will be useful later, store it after
 %   \cs{s__stop}.  Afterwards, store the precision, and the function
-%   \cs{__str_range_unsafe:nnn} that will be used to extract the first
+%   \cs{__str_range:nnn} that will be used to extract the first
 %   |#5| characters of the string.
-%   There is a need to use the \enquote{unsafe} function, as otherwise
+%   There is a need to use the internal function, as otherwise
 %   leading spaces would get stripped by |f|-expansion.  Finally, check
 %   that the \meta{style} is |?| or |s|.
 %    \begin{macrocode}
@@ -498,8 +498,8 @@
       }
     \@@_put:nw { {#4} }
     \tl_if_empty:nTF {#5}
-      { \@@_put:nw { \__str_range_unsafe:nnn { {1} {-1} } } }
-      { \@@_put:nw { \__str_range_unsafe:nnn { {1} {#5} } } }
+      { \@@_put:nw { \__str_range:nnn { {1} {-1} } } }
+      { \@@_put:nw { \__str_range:nnn { {1} {#5} } } }
     \token_if_eq_charcode:NNF #6 s
       {
         \token_if_eq_charcode:NNF #6 ?
@@ -891,7 +891,7 @@
   {
     \use:nf
       { #1 . #2 }
-      { \prg_replicate:nn { #4 - \__str_count_unsafe:n {#2} } {0} }
+      { \prg_replicate:nn { #4 - \__str_count:n {#2} } {0} }
   }
 %    \end{macrocode}
 % \end{macro}
