--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1757,7 +1757,7 @@
 \cs_new_protected_nopar:Npn \@@_wrap_word:
   {
     \int_set:Nn \l_@@_current_word_int
-      { \__str_count_ignore_spaces:N \l_@@_current_word_tl }
+      { \exp_args:No  \str_count_ignore_spaces:n \l_@@_current_word_tl }
     \int_add:Nn \l_@@_current_line_int { \l_@@_current_word_int }
     \int_compare:nNnTF \l_@@_current_line_int < \l_@@_target_count_int
       { \@@_wrap_word_fits: }
@@ -1854,37 +1854,6 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}[aux]{\__str_count_ignore_spaces:N}
-% \begin{macro}[aux]{\__str_count_ignore_spaces:n}
-% \begin{macro}[aux]{\__str_count_loop:NNNNNNNNN}
-%   The wrapping code requires to measure the number of character
-%   in each word. This could be done with \cs{tl_count:n}, but
-%   it is ten times faster (literally) to use the code below.
-%    \begin{macrocode}
-\cs_new_nopar:Npn \__str_count_ignore_spaces:N
-  { \exp_args:No \__str_count_ignore_spaces:n }
-\cs_new:Npn \__str_count_ignore_spaces:n #1
-  {
-    \__int_value:w \__int_eval:w
-      \exp_after:wN \__str_count_loop:NNNNNNNNN \tl_to_str:n {#1}
-        { X8 } { X7 } { X6 } { X5 } { X4 } { X3 } { X2 } { X1 } { X0 }
-      \q_stop
-    \__int_eval_end:
-  }
-\cs_new:Npn \__str_count_loop:NNNNNNNNN #1#2#3#4#5#6#7#8#9
-  {
-    \if_catcode:w X #9
-      \exp_after:wN \use_none_delimit_by_q_stop:w
-    \else:
-      9 +
-      \exp_after:wN \__str_count_loop:NNNNNNNNN
-    \fi:
-  }
-%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
