--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -119,6 +119,7 @@
 %<l3quark>{l3quark}
 %<l3seq>{l3seq}
 %<l3skip>{l3skip}
+%<l3str>{l3str}
 %<l3tl>{l3tl}
 %<l3token>{l3token}
 %    \end{macrocode}
