--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -753,7 +753,7 @@
 %<*package>
 \ProvidesExplPackage
   {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
-\RequirePackage{l3tl-build, l3tl-analysis, l3flag, l3str, l3str-convert}
+\RequirePackage{l3tl-build, l3tl-analysis, l3flag, l3str-convert}
 %</package>
 %    \end{macrocode}
 %
