--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -553,7 +553,7 @@
 %     \c_left_brace_str,
 %     \c_right_brace_str,
 %     \c_circumflex_str,
-%     \c_colojn_str,
+%     \c_colon_str,
 %     \c_hash_str,
 %     \c_percent_str,
 %     \c_tilde_str,
