--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -328,7 +328,7 @@
 %   Recovers the content of a \meta{str~var} and places it
 %   directly in the input stream. An error will be raised if the variable
 %   does not exist or if it is invalid. Note that it is possible to use
-%   a \meta{str directly without an accessor function.
+%   a \meta{str} directly without an accessor function.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2015-09-18]
