Change :w+ to :w in l3str

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -982,7 +982,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_item:Nn, \str_item:cn, \str_item:nn, \str_item_ignore_spaces:nn}
-% \begin{macro}[EXP, aux]{\@@_item:nn, \@@_item:ww}
+% \begin{macro}[EXP, aux]{\@@_item:nn, \@@_item:w}
 %   The \cs{str_item:nn} hands its argument with spaces escaped to
 %   \cs{@@_item:nn}, and makes sure to turn the result back into
 %   a proper string (with category code~$10$ spaces) eventually.  The
@@ -990,7 +990,7 @@
 %   which are thus ignored by \cs{@@_item:nn} since
 %   everything else is done with undelimited arguments.
 %   Evaluate the \meta{index} argument~|#2| and count characters in
-%   the string, passing those two numbers to \cs{@@_item:ww} for
+%   the string, passing those two numbers to \cs{@@_item:w} for
 %   further analysis.  If the \meta{index} is negative, shift it by
 %   the \meta{count} to know the how many character to discard, and if
 %   that is still negative give an empty result.  If the \meta{index}
@@ -1014,12 +1014,12 @@
   { \exp_args:No \@@_item:nn { \tl_to_str:n {#1} } }
 \cs_new:Npn \@@_item:nn #1#2
   {
-    \exp_after:wN \@@_item:ww
+    \exp_after:wN \@@_item:w
     \int_use:N \__int_eval:w #2 \exp_after:wN ;
     \__int_value:w \@@_count:n {#1} ;
     #1 \q_stop
   }
-\cs_new:Npn \@@_item:ww #1; #2;
+\cs_new:Npn \@@_item:w #1; #2;
   {
     \int_compare:nNnTF {#1} < \c_zero
       {
@@ -1086,7 +1086,7 @@
 % \begin{macro}[EXP]
 %   {\str_range:Nnn, \str_range:nnn, \str_range_ignore_spaces:nnn}
 % \begin{macro}[EXP, int]{\@@_range:nnn}
-% \begin{macro}[EXP, aux]{\@@_range:www, \@@_range:nnw}
+% \begin{macro}[EXP, aux]{\@@_range:w, \@@_range:nnw}
 %   Sanitize the string.  Then evaluate the arguments.  At this stage we
 %   also decrement the \meta{start index}, since our goal is to know how
 %   many characters should be removed.  Then limit the range to be
@@ -1110,13 +1110,13 @@
   { \exp_args:No \@@_range:nnn { \tl_to_str:n {#1} } }
 \cs_new:Npn \@@_range:nnn #1#2#3
   {
-    \exp_after:wN \@@_range:www
+    \exp_after:wN \@@_range:w
     \__int_value:w \@@_count:n {#1} \exp_after:wN ;
     \int_use:N \__int_eval:w #2 - \c_one \exp_after:wN ;
     \int_use:N \__int_eval:w #3 ;
     #1 \q_stop
   }
-\cs_new:Npn \@@_range:www #1; #2; #3;
+\cs_new:Npn \@@_range:w #1; #2; #3;
   {
     \exp_args:Nf \@@_range:nnw
       { \@@_range_normalize:nn {#2} {#1} }
@@ -1210,7 +1210,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_count_spaces:N, \str_count_spaces:c, \str_count_spaces:n}
-% \begin{macro}[EXP, aux]{\@@_count_spaces_loop:wwwwwwwww}
+% \begin{macro}[EXP, aux]{\@@_count_spaces_loop:w}
 %   To speed up this function, we grab and discard $9$ space-delimited
 %   arguments in each iteration of the loop.  The loop stops when the
 %   last argument is one of the trailing |X|\meta{number}, and that
@@ -1224,18 +1224,18 @@
   {
     \int_eval:n
       {
-        \exp_after:wN \@@_count_spaces_loop:wwwwwwwww
+        \exp_after:wN \@@_count_spaces_loop:w
         \tl_to_str:n {#1} ~
         X 7 ~ X 6 ~ X 5 ~ X 4 ~ X 3 ~ X 2 ~ X 1 ~ X 0 ~ X -1 ~
         \q_stop
       }
   }
-\cs_new:Npn \@@_count_spaces_loop:wwwwwwwww #1~#2~#3~#4~#5~#6~#7~#8~#9~
+\cs_new:Npn \@@_count_spaces_loop:w #1~#2~#3~#4~#5~#6~#7~#8~#9~
   {
     \if_meaning:w X #9
       \use_i_delimit_by_q_stop:nw
     \fi:
-    \c_nine + \@@_count_spaces_loop:wwwwwwwww
+    \c_nine + \@@_count_spaces_loop:w
   }
 %    \end{macrocode}
 % \end{macro}
