Add a few more string constants

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -546,14 +546,16 @@
 %
 % \section{Constant token lists}
 %
-% \begin{variable}
+% \begin{variable}[added = 2016-09-19]
 %   {
 %     \c_ampersand_str,
+%     \c_at_sign_str,
 %     \c_backslash_str,
 %     \c_left_brace_str,
 %     \c_right_brace_str,
 %     \c_circumflex_str,
 %     \c_colon_str,
+%     \c_dollar_str,
 %     \c_hash_str,
 %     \c_percent_str,
 %     \c_tilde_str,
@@ -1455,11 +1457,13 @@
 % \begin{variable}
 %   {
 %     \c_ampersand_str,
+%     \c_at_sign_str,
 %     \c_backslash_str,
 %     \c_left_brace_str,
 %     \c_right_brace_str,
 %     \c_circumflex_str,
 %     \c_colon_str,
+%     \c_dollar_str,
 %     \c_hash_str,
 %     \c_percent_str,
 %     \c_tilde_str,
@@ -1469,11 +1473,13 @@
 %   the correct category code without worries
 %    \begin{macrocode}
 \str_const:Nx \c_ampersand_str   { \cs_to_str:N \& }
+\str_const:Nx \c_at_sign_str     { \cs_to_str:N \@ }
 \str_const:Nx \c_backslash_str   { \cs_to_str:N \\ }
 \str_const:Nx \c_left_brace_str  { \cs_to_str:N \{ }
 \str_const:Nx \c_right_brace_str { \cs_to_str:N \} }
 \str_const:Nx \c_circumflex_str  { \cs_to_str:N \^ }
 \str_const:Nx \c_colon_str       { \cs_to_str:N \: }
+\str_const:Nx \c_dollar_str      { \cs_to_str:N \$ }
 \str_const:Nx \c_hash_str        { \cs_to_str:N \# }
 \str_const:Nx \c_percent_str     { \cs_to_str:N \% }
 \str_const:Nx \c_tilde_str       { \cs_to_str:N \~ }
