--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -68,7 +68,7 @@
 %
 % \begin{documentation}
 %
-% \subsection{Engine-specific conditionals}
+% \subsection{Engine}
 %
 % \begin{function}[added = 2015-09-07, EXP, pTF]^^A
 %   {^^A
@@ -88,6 +88,11 @@
 %   \emph{exactly one} supported engine. In particular,
 %   |\sys_if_engine_ptex_p:| is true for \epTeX{} but false for \eupTeX{}.
 % \end{function}
+%
+% \begin{variable}[added = 2015-09-19]{\c_sys_engine_str}
+%   The current engine given as a lower case string: will be one of
+%   |luatex|, |pdftex|, |ptex|, |uptex| or |xetex|.
+% \end{variable}
 %
 % \end{documentation}
 %
@@ -109,6 +114,7 @@
 %     \sys_if_engine_uptex:,
 %     \sys_if_engine_xetex:
 %   }
+% \begin{variable}{\c_sys_engine_str}
 %   Set up the engine tests on the basis exactly one test should be true.
 %   Mainly a case of looking for the appropriate marker primitive. For
 %   \upTeX{}, there is a complexity in that setting |-kanji-internal=sjis|
@@ -128,6 +134,7 @@
     \cs_gset_eq:NN \sys_if_engine_luatex:F  \use_none:n
     \cs_gset_eq:NN \sys_if_engine_luatex:TF \use_i:nn
     \cs_gset_eq:NN \sys_if_engine_luatex_p: \c_true_bool
+    \str_const:Nn \c_sys_engine_str { luatex }
   }
 \cs_if_exist:NT \pdftex_pdftexversion:D
   {
@@ -135,6 +142,7 @@
     \cs_gset_eq:NN \sys_if_engine_pdftex:F  \use_none:n
     \cs_gset_eq:NN \sys_if_engine_pdftex:TF \use_i:nn
     \cs_gset_eq:NN \sys_if_engine_pdftex_p: \c_true_bool
+    \str_const:Nn \c_sys_engine_str { pdftex }
   }
 \cs_if_exist:NT \ptex_kanjiskip:D
   {
@@ -148,12 +156,14 @@
         \cs_gset_eq:NN \sys_if_engine_uptex:F  \use_none:n
         \cs_gset_eq:NN \sys_if_engine_uptex:TF \use_i:nn
         \cs_gset_eq:NN \sys_if_engine_uptex_p: \c_true_bool
+        \str_const:Nn \c_sys_engine_str { uptex }
       }
       {
         \cs_gset_eq:NN \sys_if_engine_ptex:T  \use:n
         \cs_gset_eq:NN \sys_if_engine_ptex:F  \use_none:n
         \cs_gset_eq:NN \sys_if_engine_ptex:TF \use_i:nn
         \cs_gset_eq:NN \sys_if_engine_ptex_p: \c_true_bool
+        \str_const:Nn \c_sys_engine_str { ptex }
       }
   }
 \cs_if_exist:NT \xetex_XeTeXversion:D
@@ -162,8 +172,10 @@
     \cs_gset_eq:NN \sys_if_engine_xetex:F  \use_none:n
     \cs_gset_eq:NN \sys_if_engine_xetex:TF \use_i:nn
     \cs_gset_eq:NN \sys_if_engine_xetex_p: \c_true_bool
+    \str_const:Nn \c_sys_engine_str { xetex }
   }
 %    \end{macrocode}
+% \end{variable}
 % \end{macro}
 %
 % \subsection{Deprecated functions}
