--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -3043,7 +3043,7 @@ Do not distribute a modified version of this file.
       { \g_@@_typeset_implementation_bool && \g_@@_checkfunc_bool }
       {
         \iow_term:x { \c_@@_iow_separator_tl \iow_newline: }
-        \iow_open:Nn \g_@@_func_iow { \c_job_name_tl .cmds }
+        \iow_open:Nn \g_@@_func_iow { \c_sys_jobname_str .cmds }
 
         \tl_clear:N \l_@@_doc_def_tl
         \tl_clear:N \l_@@_doc_undef_tl
@@ -3214,7 +3214,7 @@ Do not distribute a modified version of this file.
   {
     Generate~the~index~by~executing\\
     \iow_indent:n
-      { makeindex~-s~gind.ist~-o~\c_job_name_tl.ind~\c_job_name_tl.idx }
+      { makeindex~-s~gind.ist~-o~\c_sys_jobname_str.ind~\c_sys_jobname_str.idx }
   }
 \tl_gput_right:Nn \PrintIndex
   { \AtEndDocument { \msg_info:nn { l3doc } { print-index-howto } } }
@@ -3454,7 +3454,7 @@ Do not distribute a modified version of this file.
   {
     Generate~the~change~list~by~executing\\
     \iow_indent:n
-      { makeindex~-s~gglo.ist~-o~\c_job_name_tl.gls~\c_job_name_tl.glo }
+      { makeindex~-s~gglo.ist~-o~\c_sys_jobname_str.gls~\c_sys_jobname_str.glo }
   }
 \tl_gput_right:Nn \PrintChanges
   { \AtEndDocument { \msg_info:nn { l3doc } { print-changes-howto } } }
