--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -104,6 +104,28 @@
 %   |luatex|, |pdftex|, |ptex|, |uptex| or |xetex|.
 % \end{variable}
 %
+% \subsection{Output format}
+%
+% \begin{function}[added = 2015-09-19, EXP, pTF]^^A
+%   {^^A
+%     \sys_if_output_dvi:,
+%     \sys_if_output_pdf:
+%   }
+%   \begin{syntax}
+%     \cs{sys_if_output_dvi:TF} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Conditionals which give the current output mode the \TeX{} run is
+%   operating in. This will always be one of two outcomes, DVI mode or
+%   PDF mode. The two sets of conditionals are thus complementary and
+%   are both provided to allow the programmer to emphasise the most
+%   appropriate case.
+% \end{function}
+%
+% \begin{variable}[added = 2015-09-19]{\c_sys_output_str}
+%   The current output mode given as a lower case string: will be one of
+%   |dvi| or |pdf|.
+% \end{variable}
+%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -203,6 +225,47 @@
     \cs_gset_eq:NN \sys_if_engine_xetex:TF \use_i:nn
     \cs_gset_eq:NN \sys_if_engine_xetex_p: \c_true_bool
     \str_const:Nn \c_sys_engine_str { xetex }
+  }
+%    \end{macrocode}
+% \end{variable}
+% \end{macro}
+%
+% \subsection{Detecting the output}
+%
+% \begin{macro}[pTF, EXP]^^A
+%   {^^A
+%     \sys_if_output_dvi:,
+%     \sys_if_output_pdf:
+%   }
+% \begin{variable}{\c_sys_output_str}
+%   This is a simple enough concept: the two views here are complementary.
+%    \begin{macrocode}
+\bool_if:nTF
+  {
+       \cs_if_exist_p:N  \pdftex_pdfoutput:D
+    && \int_compare_p:nNn \pdftex_pdfoutput:D > \c_zero
+  }
+  {
+    \cs_new_eq:NN \sys_if_output_dvi:T  \use_none:n
+    \cs_new_eq:NN \sys_if_output_dvi:F  \use:n
+    \cs_new_eq:NN \sys_if_output_dvi:TF \use_ii:nn
+    \cs_new_eq:NN \sys_if_output_dvi_p: \c_false_bool
+    \cs_new_eq:NN \sys_if_output_pdf:T  \use:n
+    \cs_new_eq:NN \sys_if_output_pdf:F  \use_none:n
+    \cs_new_eq:NN \sys_if_output_pdf:TF \use_i:nn
+    \cs_new_eq:NN \sys_if_output_pdf_p: \c_true_bool
+    \str_const:Nn \c_sys_output_str { pdf }
+  }
+  {
+    \cs_new_eq:NN \sys_if_output_dvi:T  \use:n
+    \cs_new_eq:NN \sys_if_output_dvi:F  \use_none:n
+    \cs_new_eq:NN \sys_if_output_dvi:TF \use_i:nn
+    \cs_new_eq:NN \sys_if_output_dvi_p: \c_true_bool
+    \cs_new_eq:NN \sys_if_output_pdf:T  \use_none:n
+    \cs_new_eq:NN \sys_if_output_pdf:F  \use:n
+    \cs_new_eq:NN \sys_if_output_pdf:TF \use_ii:nn
+    \cs_new_eq:NN \sys_if_output_pdf_p: \c_false_bool
+    \str_const:Nn \c_sys_output_str { dvi }
   }
 %    \end{macrocode}
 % \end{variable}
