--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -155,7 +155,7 @@
 %<*initex|package>
 %    \end{macrocode}
 %
-% \section{The name of the job}
+% \subsection{The name of the job}
 %
 % \begin{variable}{\c_sys_jobname_str}
 %   Inherited from the \LaTeX3 name for the primitive: this needs to
